--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
 }
 
 .section-2 {
+    margin-top: 30px;
     margin-bottom: 20px;
 }
 
@@ -211,6 +212,15 @@
 }
 
 /* RESPONSIVE */
+@media(min-width:768px) {
+    footer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+    }
+}
+
 @media(max-width:768px) {
 
     /* HEADER */
@@ -266,8 +276,8 @@
     }
 
     /* FOOTER */
-    
-    
+
+
     .container-footer {
         font-size: 8px;
         text-align: center;
