feat: add new pages and refactoring

--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,27 @@
     --color-three: #FFDD00;
 }
 
+html {
+    width: 100%;
+}
+
 .center {
     text-align: center;
 }
 
+
 /* HEADER */
-.header-html {
+
+#header {
     background: var(--color-one);
-    background-image: url("./images/header/tarragona.jpeg");
-    background-position: center;
+    background-image: url("/images/header/tarragona.jpeg");
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .header-container {
+
     height: 250px;
     padding: 0 15px;
     color: #fff;
@@ -35,14 +43,16 @@
 .header-titulo {
     color: #fff;
     text-align: center;
+    background-color: rgba(125, 125, 125, 0.5);
     font-size: 30px;
-    text-decoration: wavy;
+    padding: 20px 0;
 }
 
 .logo {
     margin-top: 40px;
     width: 300px;
     height: 300px;
+    z-index: 1;
 }
 
 .menu {
@@ -81,10 +91,34 @@
     display: none;
 }
 
+.dropdown-content-1,
+.dropdown-content-2 {
+    display: none;
+    position: absolute;
+    text-align: center;
+    overflow: auto;
+    z-index: 101;
+}
+
+.dropdown-content-1 a {
+    padding: 5px;
+    margin-left: 148px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content-2 a {
+    padding: 5px;
+    margin-left: 300px;
+    text-decoration: none;
+    display: block;
+}
+
 /* INICIO */
 .titulo-inicio {
     padding: 0 10px;
-    margin-top: 15px;
+    /* margin-top: 30px; */
+    margin: 40px 0;
 }
 
 .section-child {
@@ -97,6 +131,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    column-gap: 40px;
 }
 
 .section-1 {
@@ -279,19 +314,19 @@
     height: 180px;
 }
 
-.section-servicio-texto{
+.section-servicio-texto {
     margin: 30px;
     padding: 0 15px;
     font-size: 20px;
 }
+
 /* FOOTER */
 /* footer {
-    position: absolute;
-    bottom: 0;
+    margin-bottom: 0px;
+      bottom: 0;
     left: 0;
-    width: 100%;
+    width: 100%; 
 } */
-
 .container-contact {
     padding: 13px;
     background: var(--color-one);
@@ -348,9 +383,27 @@
 }
 
 /* RESPONSIVE */
+@media(min-height:980px) {
+    footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+    }
+}
+
+@media(min-width:1440px) {
+    /* footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+    } */
+}
+
 @media(min-width:768px) {
     /* footer {
-        position: absolute;
+        position: fixed;
         bottom: 0;
         left: 0;
         width: 100%;
@@ -361,6 +414,8 @@
 
     /* HEADER */
     .header-container {
+        /* display: flex;
+        flex-direction: column; */
         text-align: center;
     }
 
