--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,18 @@
 <div class="container-contact">
     <div class="contact-ubication">
-        <img class="img-ubication" src="./images/footer/ubication.jpg" alt="">
+        <img class="img-ubication" src="/images/footer/ubication.jpg" alt="">
         <p class="text-footer">Despacho en Tarragona</p>
         <p class="text-footer">Calle Jaume II, 37 CP 43120</p>
         <a class="text-footer" href="https://goo.gl/maps/GMLUvDzD8z7tfCou7" target="_blank">Ver en Google Maps</a>
     </div>
     <div class="contact-phone">
-        <img class="img-phone" src="./images/footer/phone.png" alt="">
+        <img class="img-phone" src="/images/footer/phone.png" alt="">
         <p class="text-footer">Tel&eacute;fono de contacto</p>
         <p class="text-footer">Solicita cita previa en nuestro despacho</p>
         <a class="text-footer" href="tel:+34680351119">680351119</a>
     </div>
     <div class="contact-date">
-        <img class="img-date" src="./images/footer/date.png" alt="">
+        <img class="img-date" src="/images/footer/date.png" alt="">
         <p class="text-footer">Pide Cita Online</p>
         <p class="text-footer">Solicita cita mediante nuestra plataforma</p>
         <a class="text-footer" href="#">Pedir Cita</a>
