--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ html {
     text-align: center;
 }
 
+.hide {
+    display: none !important;
+    background-color: red;
+}
+
 
 /* HEADER */
 
@@ -93,7 +98,6 @@ html {
 .dropdown-content {
     margin: 0px;
     padding: 0px;
-    display: none;
     position: absolute;
     text-align: center;
     overflow: auto;
@@ -117,7 +121,6 @@ html {
 /* INICIO */
 .titulo-inicio {
     padding: 0 10px;
-    /* margin-top: 30px; */
     margin: 40px 0;
 }
 
@@ -417,7 +420,6 @@ html {
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
 }
 
 .section-form-2 {
@@ -452,15 +454,11 @@ html {
 .input-form-tel,
 .input-form-name,
 .input-form {
+    width: 100%;
     height: 25px;
 }
 
-.input-form-contact,
-.input-form-name {
-    width: 240px;
-}
-
-.input-form-message{
+.input-form-message {
     height: 100px;
 }
 
@@ -491,30 +489,10 @@ html {
     }
 }
 
-@media(min-width:1440px) {
-    /* footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-    } */
-}
-
-@media(min-width:768px) {
-    /* footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-    } */
-}
-
 @media(max-width:768px) {
 
     /* HEADER */
     .header-container {
-        /* display: flex;
-        flex-direction: column; */
         text-align: center;
     }
 
@@ -553,14 +531,30 @@ html {
         right: 0;
     }
 
+    #menuTramitesExt,
+    #menuCiudadanosCo {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
     #menuTramitesExt a {
-        padding-top: 2px;
-        padding-bottom: 2px;
-        /* padding-left: 5px;
-        margin-bottom: 2px;*/
-        margin-top: 1px; 
-        margin-left: 230px;
-        /* margin-right: 60px; */
+        padding: 5px;
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+
+    #menuCiudadanosCo a {
+        padding: 5px;
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+
+    .dropdown-content {
+        padding-top: 1px;
+        margin-top: 1px;
     }
 
     /* INICIO */
@@ -598,6 +592,19 @@ html {
         flex-direction: column;
         gap: 5px;
     }
+
+    .section-name {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .section-contact-tel-email {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
 
     /* FOOTER */
     .container-footer {
