--- a/templates/header.html
+++ b/templates/header.html
@@ -8,18 +8,18 @@
         <a href="/index.html">Inicio</a>
         <a href="/pages/servicios.html">Servicio</a>
         <a href="#" onclick="toggleMenu('menuTramitesExt','aMenuCiudadanos,aMenuContacto');">
-            Tr&aacute;mites Extranjer&iacute;a
+            Especialidad Extranjer&iacute;a
             <div id="menuTramitesExt" class="dropdown-content hide center">
-                <a href="/pages/nacionalidad.html">Nacionalidad</a>
-                <a href="/pages/residencia.html">Residencia por arraigo</a>
-                <a href="/pages/permisos.html">Permisos de residencia</a>
+                <a href="/pages/residenciaTrabajo.html">Residencia de Trabajo Espa&ntilde;a</a>
+                <a href="/pages/residenciaArraigo.html">Residencia por Arraigo</a>
+                <a href="/pages/renovacion.html">Renovación de Tarjeta de Residencia</a>
             </div>
         </a>
         <a href="#" id='aMenuCiudadanos' onclick="toggleMenu('menuCiudadanosCo','aMenuContacto');">
             Ciudadanos Comunitarios
             <div id="menuCiudadanosCo" class="dropdown-content hide center">
-                <a href="/pages/matrimonios.html">Matrimonios mixtos</a>
-                <a href="/pages/renovacion.html">Renovación de tarjeta comunitaria</a>
+                <a href="/pages/nacionalidad.html">Nacionalidad</a>
+                <a href="/pages/residenciaFamiliar.html">Residencia Familiar Comunitario</a>
             </div>
         </a>
         <a href="/pages/contacto.html" id='aMenuContacto'>Contacto</a>
