--- a/css/style.css
+++ b/css/style.css
@@ -638,7 +638,8 @@ p {
     ul,
     li,
     ol {
-        margin-left: 2px;
+        margin-left: 5px;
+        text-align: justify;
     }
 
     p {
@@ -650,7 +651,7 @@ p {
         margin-left: 30px;
         margin-right: 45px;
         margin-top: 5px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
 
     .image-pages {
