--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
         <img class="img-date" src="/images/footer/date.png" alt="">
         <p class="text-footer">Pide Cita Online</p>
         <p class="text-footer">Solicita cita mediante nuestra plataforma</p>
-        <a class="text-footer" href="#">Pedir Cita</a>
+        <a class="text-footer" href="/pages/contacto.html">Pedir Cita</a>
     </div>
 </div>
 <div class="container-footer">
@@ -23,6 +23,6 @@
         Copyright &copy 2023 ROXANA AVILA MONTES ABOGADOS
     </div>
     <div>
-        Powered by Jim Moroco
+        Powered by Roxana Avila Abogados
     </div>
 </div>
