--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
             <div id="menuTramitesExt" class="dropdown-content hide center">
                 <a href="/pages/residenciaTrabajo.html">Residencia de Trabajo Espa&ntilde;a</a>
                 <a href="/pages/residenciaArraigo.html">Residencia por Arraigo</a>
-                <a href="/pages/renovacion.html">Renovación de Tarjeta de Residencia</a>
+                <a href="/pages/renovacionTarjeta.html">Renovación de Tarjeta de Residencia</a>
             </div>
         </a>
         <a href="#" id='aMenuCiudadanos' onclick="toggleMenu('menuCiudadanosCo','aMenuContacto');">
