feat: add social networks in header

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,24 @@
+<div class="header-fixed">
+    <a class="info-whatsapp"
+        href="https://api.whatsapp.com/send?phone=34680351119&amp;text=Buenas! Vengo a través de su sitio web avilamontesabogados.com. Mi nombre es "
+        target="_blank" rel="noopener">
+        <img class="icon-header whatsapp" alt="whatsapp"
+            src="https://static.whatsapp.net/rsrc.php/v3/yz/r/ujTY9i_Jhs1.png">
+        &nbsp;680 351 119
+    </a>
+    <a href="https://www.facebook.com/avilamonteslaw" target="blank">
+        <img class="icon-header facebook" alt="facebook" src="https://www.facebook.com/favicon.ico">
+    </a>
+    <a href="https://www.instagram.com/roxanaavilabogada" target="blank">
+        <img class="icon-header instagram" alt="instagram" src="https://www.instagram.com/favicon.ico">
+    </a>
+    <a href="https://www.linkedin.com/in/roxana-avila-montes-780084152" target="blank">
+        <img class="icon-header linkedin" alt="linkedin" src="https://www.linkedin.com/favicon.ico">
+    </a>
+    <a href="https://www.tiktok.com/@roxiavilaabogados" target="blank">
+        <img class="icon-header tiktok" alt="tiktok" src="https://www.tiktok.com/favicon.ico">
+    </a>
+</div>
 <div class="header-container">
     <img class="logo" src="/images/logo.png" alt="">
     <input type="checkbox" id="check">
