--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,33 @@ p {
     padding: 20px 0;
 }
 
+.icon-header{
+    cursor: pointer;
+    height: 22px;
+}
+
+.info-whatsapp {
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 13px;
+    height: 25px;
+}
+
+.header-fixed {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    width: 100%;
+    height: 25px;
+    position: fixed;
+    color: white;
+    background-color: var(--color-one);
+    padding-left: 20px;
+}
+
 .logo {
     margin-top: 40px;
     width: 300px;
