feat: add whatsapp float button

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,8 @@
+<a class="btn-wsp"
+    href="https://api.whatsapp.com/send?phone=34680351119&amp;text=Hola! Vengo a través de su sitio web avilamontesabogados.com. Mi nombre es "
+    target="_blank" rel="noopener">
+    <img class="icon-float-wsp" alt="whatsapp" src="https://filipettoabogados.com/wp-content/uploads/2023/06/whatsapp-ico.png">
+</a>
 <div class="container-contact">
     <div class="contact-ubication">
         <img class="img-ubication" src="/images/footer/ubication.jpg" alt="">
