--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ p {
     padding: 20px 0;
 }
 
-.icon-header{
+.icon-header {
     cursor: pointer;
     height: 22px;
 }
@@ -401,6 +401,26 @@ p {
 }
 
 /* FOOTER */
+.btn-wsp {
+    position: fixed;
+    width: 45px;
+    height: 45px;
+    line-height: 55px;
+    bottom: 20px;
+    right: 20px;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+    z-index: 100;
+}
+
+.icon-float-wsp {
+    width: 45px;
+    height: 45px;
+}
+
 .container-contact {
     padding: 13px;
     background: var(--color-one);
