--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header-fixed">
     <a class="info-whatsapp"
-        href="https://api.whatsapp.com/send?phone=34680351119&amp;text=Buenas! Vengo a través de su sitio web avilamontesabogados.com. Mi nombre es "
+        href="https://api.whatsapp.com/send?phone=34680351119&amp;text=Hola! Vengo a través de su sitio web avilamontesabogados.com. Mi nombre es "
         target="_blank" rel="noopener">
         <img class="icon-header whatsapp" alt="whatsapp"
             src="https://static.whatsapp.net/rsrc.php/v3/yz/r/ujTY9i_Jhs1.png">
